tests/errors/runtime/E008_private_access.zy
<# ../semantic/E008_mod <= m

>> m::private_fn() ¶
